// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarDropdown should render ToolbarDropdown 0: opened-dropdown--0 1`] = `
Array [
  Array [
    "",
    <div
      className="components-dropdown components-dropdown-menu components-toolbar"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Change text alignment"
        className="components-button components-dropdown-menu__toggle has-icon"
        data-experimental-toolbar-item={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 19.8h8.9v-1.5H4v1.5zm8.9-15.6H4v1.5h8.9V4.2zm-8.9 7v1.5h16v-1.5H4z"
          />
        </svg>
      </button>
    </div>,
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div
          className="components-dropdown components-dropdown-toggle"
        >
          <button
            aria-expanded={true}
            aria-haspopup="true"
            aria-label="test label 0"
            aria-pressed={true}
            className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control is-active is-pressed has-text has-icon"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="dashicon dashicons-admin-customizer"
              focusable={false}
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.33 3.57s.27-.8-.31-1.36c-.53-.52-1.22-.24-1.22-.24-.61.3-5.76 3.47-7.67 5.57-.86.96-2.06 3.79-1.09 4.82.92.98 3.96-.17 4.79-1 2.06-2.06 5.21-7.17 5.5-7.79zM1.4 17.65c2.37-1.56 1.46-3.41 3.23-4.64.93-.65 2.22-.62 3.08.29.63.67.8 2.57-.16 3.46-1.57 1.45-4 1.55-6.15.89z"
              />
            </svg>
            <span
              className="components-dropdown-menu__indicator"
              key="0,1"
            />
          </button>
          <div
            onKeyDown={[Function]}
            tabIndex="-1"
          >
            <div
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="components-popover components-dropdown__content components-dropdown-button__popover is-without-arrow"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                >
                  <div
                    className="components-popover__content"
                    tabIndex="-1"
                  >
                    <div
                      style={
                        Object {
                          "position": "relative",
                        }
                      }
                    >
                      <iframe
                        aria-hidden={true}
                        frameBorder={0}
                        src="about:blank"
                        style={
                          Object {
                            "display": "block",
                            "height": "100%",
                            "left": 0,
                            "opacity": 0,
                            "overflow": "hidden",
                            "pointerEvents": "none",
                            "position": "absolute",
                            "top": 0,
                            "width": "100%",
                            "zIndex": -1,
                          }
                        }
                        tabIndex={-1}
                      />
                      <div
                        aria-label="test label 0"
                        aria-orientation="vertical"
                        className="components-dropdown-menu__menu test-menu-class"
                        role="menu"
                      >
                        <button
                          className="components-button components-dropdown-menu__menu-item is-active"
                          onClick={[Function]}
                          role="menuitem"
                          type="button"
                        >
                          ToolbarButton1
                        </button>
                        <button
                          className="components-button components-dropdown-menu__menu-item"
                          onClick={[Function]}
                          role="menuitem"
                          type="button"
                        >
                          ToolbarButton2
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>,
  ],
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        <div
          aria-activedescendant={null}
          aria-label="Write quote…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
        <div
          aria-activedescendant={null}
          aria-label="Write citation…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
      </blockquote>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`ToolbarDropdown should render ToolbarDropdown 0: test--0 1`] = `
Array [
  Array [
    "",
    <div
      className="components-dropdown components-dropdown-menu components-toolbar"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Change text alignment"
        className="components-button components-dropdown-menu__toggle has-icon"
        data-experimental-toolbar-item={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 19.8h8.9v-1.5H4v1.5zm8.9-15.6H4v1.5h8.9V4.2zm-8.9 7v1.5h16v-1.5H4z"
          />
        </svg>
      </button>
    </div>,
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div
          className="components-dropdown components-dropdown-toggle"
        >
          <button
            aria-expanded={false}
            aria-haspopup="true"
            aria-label="test label 0"
            aria-pressed={true}
            className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control is-active is-pressed has-text has-icon"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="dashicon dashicons-admin-customizer"
              focusable={false}
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.33 3.57s.27-.8-.31-1.36c-.53-.52-1.22-.24-1.22-.24-.61.3-5.76 3.47-7.67 5.57-.86.96-2.06 3.79-1.09 4.82.92.98 3.96-.17 4.79-1 2.06-2.06 5.21-7.17 5.5-7.79zM1.4 17.65c2.37-1.56 1.46-3.41 3.23-4.64.93-.65 2.22-.62 3.08.29.63.67.8 2.57-.16 3.46-1.57 1.45-4 1.55-6.15.89z"
              />
            </svg>
            <span
              className="components-dropdown-menu__indicator"
              key="0,1"
            />
          </button>
        </div>
      </div>
    </div>,
  ],
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        <div
          aria-activedescendant={null}
          aria-label="Write quote…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
        <div
          aria-activedescendant={null}
          aria-label="Write citation…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
      </blockquote>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`ToolbarDropdown should render ToolbarDropdown 1: opened-dropdown--1 1`] = `
Array [
  Array [
    "",
    <div
      className="components-dropdown components-dropdown-menu components-toolbar"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Change text alignment"
        className="components-button components-dropdown-menu__toggle has-icon"
        data-experimental-toolbar-item={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 19.8h8.9v-1.5H4v1.5zm8.9-15.6H4v1.5h8.9V4.2zm-8.9 7v1.5h16v-1.5H4z"
          />
        </svg>
      </button>
    </div>,
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div
          className="components-dropdown components-dropdown-toggle test-class"
        >
          <button
            aria-expanded={true}
            aria-haspopup="true"
            aria-label="test label 1"
            aria-pressed={true}
            className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control is-active is-pressed has-text has-icon"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="dashicon dashicons-admin-customizer"
              focusable={false}
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.33 3.57s.27-.8-.31-1.36c-.53-.52-1.22-.24-1.22-.24-.61.3-5.76 3.47-7.67 5.57-.86.96-2.06 3.79-1.09 4.82.92.98 3.96-.17 4.79-1 2.06-2.06 5.21-7.17 5.5-7.79zM1.4 17.65c2.37-1.56 1.46-3.41 3.23-4.64.93-.65 2.22-.62 3.08.29.63.67.8 2.57-.16 3.46-1.57 1.45-4 1.55-6.15.89z"
              />
            </svg>
            <span
              className="components-dropdown-menu__indicator"
              key="0,1"
            />
          </button>
          <div
            onKeyDown={[Function]}
            tabIndex="-1"
          >
            <div
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="components-popover components-dropdown__content components-dropdown-button__popover is-without-arrow"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                >
                  <div
                    className="components-popover__content"
                    tabIndex="-1"
                  >
                    <div
                      style={
                        Object {
                          "position": "relative",
                        }
                      }
                    >
                      <iframe
                        aria-hidden={true}
                        frameBorder={0}
                        src="about:blank"
                        style={
                          Object {
                            "display": "block",
                            "height": "100%",
                            "left": 0,
                            "opacity": 0,
                            "overflow": "hidden",
                            "pointerEvents": "none",
                            "position": "absolute",
                            "top": 0,
                            "width": "100%",
                            "zIndex": -1,
                          }
                        }
                        tabIndex={-1}
                      />
                      <div
                        aria-label="test label 1"
                        aria-orientation="vertical"
                        className="components-dropdown-menu__menu"
                        role="menu"
                      >
                        <button
                          className="components-button components-dropdown-menu__menu-item is-active"
                          onClick={[Function]}
                          role="menuitem"
                          type="button"
                        >
                          ToolbarButton3
                        </button>
                        <button
                          className="components-button components-dropdown-menu__menu-item"
                          disabled={true}
                          onClick={[Function]}
                          role="menuitem"
                          type="button"
                        >
                          ToolbarButton4
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>,
  ],
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        <div
          aria-activedescendant={null}
          aria-label="Write quote…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
        <div
          aria-activedescendant={null}
          aria-label="Write citation…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
      </blockquote>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`ToolbarDropdown should render ToolbarDropdown 1: test--1 1`] = `
Array [
  Array [
    "",
    <div
      className="components-dropdown components-dropdown-menu components-toolbar"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Change text alignment"
        className="components-button components-dropdown-menu__toggle has-icon"
        data-experimental-toolbar-item={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 19.8h8.9v-1.5H4v1.5zm8.9-15.6H4v1.5h8.9V4.2zm-8.9 7v1.5h16v-1.5H4z"
          />
        </svg>
      </button>
    </div>,
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div
          className="components-dropdown components-dropdown-toggle test-class"
        >
          <button
            aria-expanded={false}
            aria-haspopup="true"
            aria-label="test label 1"
            aria-pressed={true}
            className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control is-active is-pressed has-text has-icon"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="dashicon dashicons-admin-customizer"
              focusable={false}
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.33 3.57s.27-.8-.31-1.36c-.53-.52-1.22-.24-1.22-.24-.61.3-5.76 3.47-7.67 5.57-.86.96-2.06 3.79-1.09 4.82.92.98 3.96-.17 4.79-1 2.06-2.06 5.21-7.17 5.5-7.79zM1.4 17.65c2.37-1.56 1.46-3.41 3.23-4.64.93-.65 2.22-.62 3.08.29.63.67.8 2.57-.16 3.46-1.57 1.45-4 1.55-6.15.89z"
              />
            </svg>
            <span
              className="components-dropdown-menu__indicator"
              key="0,1"
            />
          </button>
        </div>
      </div>
    </div>,
  ],
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        <div
          aria-activedescendant={null}
          aria-label="Write quote…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
        <div
          aria-activedescendant={null}
          aria-label="Write citation…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
      </blockquote>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`ToolbarDropdown should render ToolbarDropdown 2: test--2 1`] = `
Array [
  Array [
    "",
    <div
      className="components-dropdown components-dropdown-menu components-toolbar"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Change text alignment"
        className="components-button components-dropdown-menu__toggle has-icon"
        data-experimental-toolbar-item={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 19.8h8.9v-1.5H4v1.5zm8.9-15.6H4v1.5h8.9V4.2zm-8.9 7v1.5h16v-1.5H4z"
          />
        </svg>
      </button>
    </div>,
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div
          className="components-dropdown components-dropdown-toggle"
        >
          <button
            aria-expanded={false}
            aria-haspopup="true"
            aria-label="test label 2"
            aria-pressed={false}
            className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control has-text has-icon"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="dashicon dashicons-admin-customizer"
              focusable={false}
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.33 3.57s.27-.8-.31-1.36c-.53-.52-1.22-.24-1.22-.24-.61.3-5.76 3.47-7.67 5.57-.86.96-2.06 3.79-1.09 4.82.92.98 3.96-.17 4.79-1 2.06-2.06 5.21-7.17 5.5-7.79zM1.4 17.65c2.37-1.56 1.46-3.41 3.23-4.64.93-.65 2.22-.62 3.08.29.63.67.8 2.57-.16 3.46-1.57 1.45-4 1.55-6.15.89z"
              />
            </svg>
            <span
              className="components-dropdown-menu__indicator"
            />
          </button>
        </div>
      </div>
    </div>,
  ],
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        <div
          aria-activedescendant={null}
          aria-label="Write quote…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
        <div
          aria-activedescendant={null}
          aria-label="Write citation…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
      </blockquote>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`ToolbarDropdown should render ToolbarDropdown 3: test--3 1`] = `
Array [
  Array [
    "",
    <div
      className="components-dropdown components-dropdown-menu components-toolbar"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Change text alignment"
        className="components-button components-dropdown-menu__toggle has-icon"
        data-experimental-toolbar-item={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 19.8h8.9v-1.5H4v1.5zm8.9-15.6H4v1.5h8.9V4.2zm-8.9 7v1.5h16v-1.5H4z"
          />
        </svg>
      </button>
    </div>,
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      >
        <div>
          <button
            aria-label="ToolbarButton7"
            aria-pressed={true}
            className="components-button components-toolbar__control toolbar-button-test7 is-pressed"
            data-experimental-toolbar-item={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          />
        </div>
      </div>
    </div>,
  ],
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        <div
          aria-activedescendant={null}
          aria-label="Write quote…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
        <div
          aria-activedescendant={null}
          aria-label="Write citation…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
      </blockquote>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`ToolbarDropdown should render ToolbarDropdown 4: test--4 1`] = `
Array [
  Array [
    "",
    <div
      className="components-dropdown components-dropdown-menu components-toolbar"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        aria-label="Change text alignment"
        className="components-button components-dropdown-menu__toggle has-icon"
        data-experimental-toolbar-item={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 19.8h8.9v-1.5H4v1.5zm8.9-15.6H4v1.5h8.9V4.2zm-8.9 7v1.5h16v-1.5H4z"
          />
        </svg>
      </button>
    </div>,
    "",
    <div
      className="editor-format-toolbar block-editor-format-toolbar"
      key="toolbar-dropdown-0"
    >
      <div
        className="components-toolbar"
      />
    </div>,
  ],
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        <div
          aria-activedescendant={null}
          aria-label="Write quote…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
        <div
          aria-activedescendant={null}
          aria-label="Write citation…"
          aria-multiline=""
          aria-owns={null}
          className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
          contentEditable={true}
          onBlur={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="textbox"
          style={
            Object {
              "whiteSpace": "pre-wrap",
            }
          }
          suppressContentEditableWarning={true}
        />
      </blockquote>,
    ],
    Array [
      "",
      "",
    ],
    "",
  ],
]
`;
